fix wrap

--- a/frontend/src/app/components/wrap/wrap.component.less
+++ b/frontend/src/app/components/wrap/wrap.component.less
@@ -3,48 +3,52 @@
     height: 100vh;
   }
   
-  .sidebar {
-    width: 220px;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  
-    ul {
-      list-style: none;
-      padding: 0;
-  
-      li {
-        padding: 0.5rem 1rem;
-        cursor: pointer;
-        border-radius: 8px;
-        transition: background 0.3s;
-  
-        &:hover,
-        &.active {
-          background-color: #e1e1e1;
-        }
+.sidebar {
+  width: 220px;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  ul {
+    list-style: none;
+    padding: 0;
+
+    li {
+      padding: 0.5rem 1rem;
+      cursor: pointer;
+      border-radius: 8px;
+      transition: background 0.3s;
+
+      &:hover,
+      &.active {
+        background-color: #e1e1e1;
       }
     }
   }
-  
-  .content {
-    flex: 1;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+
+  .header {
+    height: 60px;
     display: flex;
-    flex-direction: column;
-  
-    .header {
-      height: 60px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 2rem;
-      border-bottom: 1px solid #333;
-    }
-  
-    .router-wrapper {
-      flex: 1;
-      overflow: auto;
-    }
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 2rem;
+    border-bottom: 1px solid #333;
   }
+
+  .router-wrapper {
+    flex: 1;
+    overflow: auto;
+  }
+}
+
+.hidden {
+  display: hidden;
+}
   
